--- a/HRAdminAPI/HRAdminAPI.csproj
+++ b/HRAdminAPI/HRAdminAPI.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="EmployeeBase.cs" />
+    <Compile Include="FactoryPattern.cs" />
     <Compile Include="IEmployee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
